[gd_scene load_steps=10 format=3 uid="uid://c6f1bby6ysc1w"]

[ext_resource type="Script" uid="uid://qdj1h4807qvl" path="res://Script/game_world.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://503kg0miryk0" path="res://Prefab/character.tscn" id="2_character"]
[ext_resource type="PackedScene" path="res://Prefab/enemy_dancer.tscn" id="3_dancer"]
[ext_resource type="PackedScene" path="res://Prefab/enemy_princess.tscn" id="4_princess"]
[ext_resource type="PackedScene" path="res://Prefab/enemy_guard.tscn" id="5_guard"]
[ext_resource type="PackedScene" path="res://Prefab/enemy_butler.tscn" id="6_butler"]
[ext_resource type="PackedScene" path="res://Prefab/supervisor.tscn" id="7_supervisor"]
[ext_resource type="PackedScene" uid="uid://light001" path="res://Prefab/light.tscn" id="8_light"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_platform"]
size = Vector2(20000, 200)

[node name="GameWorld" type="Node2D"]
script = ExtResource("1_script")

[node name="SuspicionUI" type="CanvasLayer" parent="."]

[node name="BarContainer" type="Control" parent="SuspicionUI"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -44.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 1

[node name="BarBackground" type="ColorRect" parent="SuspicionUI/BarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.2, 0.9)
grow_horizontal = 2
grow_vertical = 2

[node name="BarFill" type="ColorRect" parent="SuspicionUI/BarContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
offset_right = 0.0
color = Color(0.9, 0.25, 0.2, 1)
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="SuspicionUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -30.0
offset_right = 150.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 48
text = "游戏失败"
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[node name="Supervisor" parent="." instance=ExtResource("7_supervisor")]
position = Vector2(2407, 427)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 450)

[node name="Platform" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="Ground" type="CollisionShape2D" parent="Platform"]
position = Vector2(10000, 868)
shape = SubResource("RectangleShape2D_platform")

[node name="PlatformVisual" type="Polygon2D" parent="Platform"]
scale = Vector2(0.11579999, 1)
color = Color(0.4, 0.35, 0.3, 1)
polygon = PackedVector2Array(0, 768, 20000, 768, 20000, 863.0349, 20000, 968, 0, 968)

[node name="Character" parent="." instance=ExtResource("2_character")]
position = Vector2(400, 736)

[node name="Dancer" parent="." instance=ExtResource("3_dancer")]
position = Vector2(800, 744)

[node name="Princess" parent="." instance=ExtResource("4_princess")]
position = Vector2(1200, 744)

[node name="Guard" parent="." instance=ExtResource("5_guard")]
position = Vector2(1600, 744)

[node name="Butler" parent="." instance=ExtResource("6_butler")]
position = Vector2(2000, 744)

[node name="Light" parent="." instance=ExtResource("8_light")]
position = Vector2(600, 650)
